<resources>
    <string name="app_name">UIExamples</string>
    <string name="btn_layouts">Layouts</string>
    <string name="btn_buttons">Buttons</string>
    <string name="btn_text_view">Text view</string>
    <string name="btn_edit_text">Edit text</string>
    <string name="title_activity_text_view">TextViewActivity</string>
    <string name="title_activity_edit_text">EditTextActivity</string>
    <string name="btn_layouts_linear">Linear layout</string>
    <string name="btn_layouts_relative">Relative layouts</string>
    <string name="btn_layouts_table">Table layout</string>
    <string name="txt_table_cell">text</string>
    <string name="btn_layouts_grid">Grid layout</string>
    <string name="img_image_one_desc">image one</string>
    <string name="img_image_two_desc">image two</string>
    <string name="btn_layouts_frame">Frame layout</string>
    <string name="edit_login">Login</string>
    <string name="btn_login">Login</string>
    <string name="btn_registration">Registration</string>
    <string name="edit_password">Password</string>
    <string name="edit_name">Name</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_profile">User profile</string>
    <string name="btn_log_off">Log off</string>
    <string name="btn_layouts_constraint">Constraint layout</string>
    <string name="txt_no_login">no login</string>
    <string name="txt_no_password">no password</string>
    <string name="txt_no_name">no name</string>
    <string name="err_small_password">password must be 10 or more characters length</string>
    <string name="err_different_password">Different passwords</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main_navigation">UIExamples NavigationActivity</string>
</resources>
