<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp"
    tools:context="com.github.scorpinoc.uiexamples.LayoutsActivity">

    <!--todo refactor-->

    <Button
        android:id="@+id/btn_layouts_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_layouts_linear" />

    <Button
        android:id="@+id/btn_layouts_relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_layouts_relative" />

    <Button
        android:id="@+id/btn_layouts_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_layouts_table" />

    <Button
        android:id="@+id/btn_layouts_grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_layouts_grid" />

    <Button
        android:id="@+id/btn_layouts_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_layouts_frame" />

    <Button
        android:id="@+id/btn_layouts_constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_layouts_constraint" />

</LinearLayout>
