<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_layouts"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/btn_layouts" />
        <item
            android:id="@+id/nav_text_view"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/btn_text_view" />
        <item
            android:id="@+id/nav_edit_text"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/btn_edit_text" />
        <item
            android:id="@+id/nav_buttons"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/btn_buttons" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
